[gd_scene load_steps=9 format=3 uid="uid://dow7fuxoqadl7"]

[ext_resource type="Script" path="res://scripts/level_selection.gd" id="1_valy6"]
[ext_resource type="PackedScene" uid="uid://xnqbypxxfiob" path="res://scenes/buttons/menu_button.tscn" id="7_85u42"]

[sub_resource type="GDScript" id="GDScript_ve0ai"]
script/source = "extends StaticBody2D


# Called when the node enters the scene tree for the first time.
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l34gv"]
size = Vector2(84, 84)

[sub_resource type="PackedScene" id="PackedScene_7j6nw"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("grid", "StaticBody2D", "dropable", "script", "ColorRect", "ColorRect", "offset_left", "offset_top", "offset_right", "offset_bottom", "mouse_filter", "CollisionShape2D", "CollisionShape2D", "position", "shape"),
"node_count": 3,
"node_paths": [NodePath("."), NodePath(".")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 1, 3, 0, 1, 2, 1073741824, 0, 5, 4, -1, 5, 6, 1, 7, 2, 8, 3, 9, 4, 10, 5, 0, 1073741825, 0, 12, 11, -1, 2, 13, 6, 14, 7, 0),
"variants": [SubResource("GDScript_ve0ai"), -37.0, -38.0, 35.0, 34.0, 2, Vector2(-1, -2), SubResource("RectangleShape2D_l34gv")],
"version": 3
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_naul7"]
size = Vector2(44, 45)

[sub_resource type="PackedScene" id="PackedScene_bkx06"]
_bundled = {
"conn_count": 4,
"conns": PackedInt32Array(1073741828, 1073741827, 15, 14, 2, 0, 0, 1073741830, 1073741829, 17, 16, 2, 0, 0, 1073741832, 1073741831, 19, 18, 2, 0, 0, 1073741834, 1073741833, 21, 20, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("object", "Node2D", "script", "Sprite2D", "Sprite2D", "position", "scale", "texture", "Area2D", "Area2D", "CollisionShape2D", "CollisionShape2D", "position", "shape", "_on_area_2d_body_entered", "body_entered", "_on_area_2d_body_exited", "body_exited", "_on_area_2d_mouse_entered", "mouse_entered", "_on_area_2d_mouse_exited", "mouse_exited"),
"node_count": 4,
"node_paths": [NodePath("."), NodePath("."), NodePath("./Area2D"), NodePath("."), NodePath("Area2D"), NodePath("."), NodePath("Area2D"), NodePath("."), NodePath("Area2D"), NodePath("."), NodePath("Area2D")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 1, 2, 0, 0, 1073741824, 0, 4, 3, -1, 3, 5, 1, 6, 2, 7, 3, 0, 1073741825, 0, 9, 8, -1, 0, 0, 1073741826, 0, 11, 10, -1, 2, 12, 4, 13, 5, 0),
"variants": [null, Vector2(0, -3), Vector2(0.369141, 0.369141), null, Vector2(0, -3), SubResource("RectangleShape2D_naul7")],
"version": 3
}

[sub_resource type="PackedScene" id="PackedScene_ca7bk"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Node2D", "Node2D", "ColorRect", "ColorRect", "offset_right", "offset_bottom", "mouse_filter", "color", "grid", "position", "grid2", "position", "grid4", "position", "grid3", "position", "grid6", "position", "grid7", "position", "grid8", "position", "grid10", "position", "grid11", "position", "grid12", "position", "grid13", "position", "grid15", "position", "object", "position"),
"node_count": 15,
"node_paths": [NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath(".")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 0, 0, 1073741824, 0, 3, 2, -1, 4, 4, 0, 5, 1, 6, 2, 7, 3, 0, 1073741825, 0, 2147483647, 8, 4, 1, 9, 5, 0, 1073741826, 0, 2147483647, 10, 6, 1, 11, 7, 0, 1073741827, 0, 2147483647, 12, 8, 1, 13, 9, 0, 1073741828, 0, 2147483647, 14, 10, 1, 15, 11, 0, 1073741829, 0, 2147483647, 16, 12, 1, 17, 13, 0, 1073741830, 0, 2147483647, 18, 14, 1, 19, 15, 0, 1073741831, 0, 2147483647, 20, 16, 1, 21, 17, 0, 1073741832, 0, 2147483647, 22, 18, 1, 23, 19, 0, 1073741833, 0, 2147483647, 24, 20, 1, 25, 21, 0, 1073741834, 0, 2147483647, 26, 22, 1, 27, 23, 0, 1073741835, 0, 2147483647, 28, 24, 1, 29, 25, 0, 1073741836, 0, 2147483647, 30, 26, 1, 31, 27, 0, 1073741837, 0, 2147483647, 32, 28, 1, 33, 29, 0),
"variants": [1153.0, 645.0, 2, Color(0.384314, 0, 0.384314, 1), SubResource("PackedScene_7j6nw"), Vector2(168, 144), SubResource("PackedScene_7j6nw"), Vector2(168, 272), SubResource("PackedScene_7j6nw"), Vector2(168, 544), SubResource("PackedScene_7j6nw"), Vector2(168, 408), SubResource("PackedScene_7j6nw"), Vector2(304, 144), SubResource("PackedScene_7j6nw"), Vector2(304, 272), SubResource("PackedScene_7j6nw"), Vector2(304, 544), SubResource("PackedScene_7j6nw"), Vector2(304, 408), SubResource("PackedScene_7j6nw"), Vector2(456, 144), SubResource("PackedScene_7j6nw"), Vector2(456, 272), SubResource("PackedScene_7j6nw"), Vector2(456, 544), SubResource("PackedScene_7j6nw"), Vector2(456, 408), SubResource("PackedScene_bkx06"), Vector2(824, 152)],
"version": 3
}

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_valy6")
level1 = SubResource("PackedScene_ca7bk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1151.0
offset_bottom = 646.0
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="Level1_btn" type="Button" parent="."]
offset_left = 233.0
offset_top = 273.0
offset_right = 347.0
offset_bottom = 388.0
text = "1"

[node name="Level2_btn" type="Button" parent="."]
offset_left = 373.0
offset_top = 273.0
offset_right = 487.0
offset_bottom = 388.0
text = "2"

[node name="Level3_btn" type="Button" parent="."]
offset_left = 517.0
offset_top = 274.0
offset_right = 631.0
offset_bottom = 389.0
text = "3"

[node name="Level4_btn" type="Button" parent="."]
offset_left = 653.0
offset_top = 273.0
offset_right = 767.0
offset_bottom = 388.0
text = "4"

[node name="Level5_btn" type="Button" parent="."]
offset_left = 789.0
offset_top = 273.0
offset_right = 903.0
offset_bottom = 388.0
text = "5"

[node name="MenuButton" parent="." instance=ExtResource("7_85u42")]
position = Vector2(32, 36)

[connection signal="pressed" from="Level1_btn" to="." method="_on_level_1_btn_pressed"]
[connection signal="pressed" from="Level2_btn" to="." method="_on_level_2_btn_pressed"]
[connection signal="pressed" from="Level3_btn" to="." method="_on_level_3_btn_pressed"]
[connection signal="pressed" from="Level4_btn" to="." method="_on_level_4_btn_pressed"]
[connection signal="pressed" from="Level5_btn" to="." method="_on_level_5_btn_pressed"]
